--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@
   transform: scale(1.3);
 }
 .container .button__container {
-  margin: 30% auto;
+  margin: 30% auto 0 auto;
 }
 .container button {
   background-color: var(--hover--primary-color);
