--- a/index.scss
+++ b/index.scss
@@ -79,7 +79,7 @@
     }
   }
   & .button__container {
-    margin: 30% auto;
+    margin: 30% auto 0 auto;
   }
   & button {
     background-color: var(--hover--primary-color);
